2006-09-28 Ian Rutt
 * Added append capability to output files. 

2006-09-27 Ian Rutt
 * Fixed minor bug in nc2config

2006-09-20 Ian Rutt
 * Added feature so that config file data is automatically added to output
 netcdf files as attribute.
 * Added utility nc2config that extracts this attribute and outputs it as
 plain text.

2006-09-15 Ian Rutt
 * Reorganisation and extension of restart-on-demand code
 * Added glimmer_restart_statscal.F90, which deals with static scalar
 variables.

2006-09-11 Ian Rutt
 * Slightly changed behaviour of depth-dependent calving. Now calves if
 depth <= specified level, rather than just less-than.
 * Fixed some bugs with water-budget accounting in glint.

2006-09-06 Ian Rutt
 * Began adding base code for restart-on-demand. This is
 glimmer_restart_common.F90, which provides a set of NetCDF routines for
 dumping arbitrary sequences of variables/arrays to file and retrieving
 them.

2006-08-25 Ian Rutt
 * Plumbed in new projection code. Tested successfully.
 * Retained capability to pase [GLINT projection] config section, but
 warning issued. This is a deprecated feature and should be removed at
 some point.
 * Fixed bug in glimmer_config.F90. Array-reading code now correctly
 parses arrays with varying sizes - a pointer array of the correct length
 is returned.

2006-08-22 Ian Rutt
 * Finished consolidated projection code. Tested against exisiting
 projection code where available, and against itself (i.e. forward and
 reverse transformations agree) where projection is new. Ready to be
 plumbed in.

2006-08-21 Ian Rutt
 * Completed first go through re-jigging of projection transformation and
 CF handling code. Still to be integrated into build and tested.

2006-08-18 Ian Rutt
 * More work on projection code. Only inverse of stereographic projection
 still to do

2006-08-17 Ian Rutt
 * Added beginnings of consolidated projection code:
	glimmer_map_types.F90
	glimmer_map_init.F90
	glimmer_map_trans.F90

2006-08-16 Ian Rutt