@@ -1,3 +1,6 @@
+2006-10-10 Ian Rutt
+ * Added precip enhancement to eismint3-greenland code
+
 2006-09-28 Ian Rutt
  * Added append capability to output files. 
 
